--- a/src/components/delivery/deliveryCollections/deliveryItem/deliveryItem.css
+++ b/src/components/delivery/deliveryCollections/deliveryItem/deliveryItem.css
@@ -1,18 +1,18 @@
 @import "D:\Zomato Clone\zomato-clone\src\variables.css";
 
 .delivery-item-cover {
-    height: 190px;
-    width: 260px;
+    height: 160px;
+    width: 160px;
     background-color: var(--primary-bg);
     box-shadow: var(--collection-shadow);
-    border-radius: 8px;
+    border-radius: 50%;
 }
 
 .delivery-item-image {
     object-fit: cover;
     height: 100%;
     width: 100%;
-    border-radius: 8px;
+    border-radius: 50%;
 }
 
 .delivery-item-title {
