--- a/src/components/common/exploreSection/exploreCard/exploreCard.css
+++ b/src/components/common/exploreSection/exploreCard/exploreCard.css
@@ -1,4 +1,4 @@
-@import "D:\Zomato Clone\zomato-clone\src\variables.css";
+@import "../../../../variables.css";
 
 .explore-card {
     margin: 12px 0px 24px 0px;
