--- a/public/index.css
+++ b/public/index.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito&display=swap');
 
-@import "D:\Zomato Clone\zomato-clone\src\styles\commonClasses.css";
+@import "../src/styles/commonClasses.css";
 
 body {
 
