--- a/src/components/collection/collection.css
+++ b/src/components/collection/collection.css
@@ -1,4 +1,4 @@
-@import "D:\Zomato Clone\zomato-clone\src\variables.css";
+@import "../../variables.css";
 
 .collection-wrapper {
     background-color: var(--inactive-color);
