--- a/src/components/common/filters/filteritem/filteritem.css
+++ b/src/components/common/filters/filteritem/filteritem.css
@@ -1,4 +1,4 @@
-@import "D:\Zomato Clone\zomato-clone\src\variables.css";
+@import "../../../../variables.css";
 
 .filter-item {
     padding: 8px;
