--- a/src/components/common/tab/tabOptions.css
+++ b/src/components/common/tab/tabOptions.css
@@ -1,4 +1,4 @@
-@import "D:\Zomato Clone\zomato-clone\src\variables.css";
+@import "../../../variables.css";
 
 .tab-options {
     box-shadow: var(--border-white) 0px -0.5px 0px inset;
