--- a/src/components/delivery/topBrands/topBrands.css
+++ b/src/components/delivery/topBrands/topBrands.css
@@ -1,4 +1,4 @@
-@import "D:\Zomato Clone\zomato-clone\src\variables.css";
+@import "../../../variables.css";
 
 .top-brands {
     padding-top: 30px;
